test/fail_compilation/fail332.d
import core.vararg;

void foo(int,...) {}

void bar(){
   foo();
}

